# ROBO720-persisten_workspace

./: .gitignore  EX3_lesserRebuild.sh  Exercise1_Gork_Eigen.cpp  LINK_edu-franka_simulation_ws  LINK_edu_franka_WS  frankaPlot.puml  graph.dot  launchFranka.sh  lesserRebuild.sh  rebuildNlaunchFranka_cust.sh  setup.sh
.colcon/: defaults.yaml
dev/: Exercise1_Gork_Eigen  Exercise1_Gork_Eigen.cpp  eigen.cpp  kdl  kdl.cpp
src/: graph.dot
src/log/: latest_graph
src/noise_cpp_pck/: CMakeLists.txt  package.xml
src/noise_cpp_pck/src/: noise_cpp_node.cpp
src/noise_maker_pck/: package.xml  setup.cfg  setup.py
src/noise_maker_pck/noise_maker/: noise_maker.py
src_ROBO720/EX1/KinematicsEX1/: CMakeLists.txt  package.xml
src_ROBO720/EX1/KinematicsEX1/src/: node1.cpp  node2.cpp  node_rnd_config.cpp
src_ROBO720/EX1/launch/: fwd_kinematics.py
src_ROBO720/EX2/franka_cust_control_2/: CMakeLists.txt  MyController_plugins.xml  package.xml
src_ROBO720/EX2/franka_cust_control_2/config/: franka_cust_control_2.yaml
src_ROBO720/EX2/franka_cust_control_2/include/franka_cust_control_2/: MyController_header.hpp
src_ROBO720/EX2/franka_cust_control_2/launch/: controller.launch.py
src_ROBO720/EX2/franka_cust_control_2/src/: MyController_cppFile.cpp
src_ROBO720/EX2/franka_custom_controllers/: CMakeLists.txt  package.xml
src_ROBO720/EX2/franka_custom_controllers/config/: velocity_controller.yaml
src_ROBO720/EX2/franka_custom_controllers/include/franka_custom_controllers/: velocity_command_controller.hpp
src_ROBO720/EX2/franka_custom_controllers/launch/: velocity_control.launch.py
src_ROBO720/EX2/franka_custom_controllers/src/: velocity_command_controller.cpp
src_ROBO720/EX2/fuck_it_we_move_py/: package.xml  setup.cfg  setup.py
src_ROBO720/EX2/fuck_it_we_move_py/fuck_it_we_move_py/: node1.py  node2.py
src_ROBO720/EX3/franka_CC_3/: CMakeLists.txt  MyController_plugins.xml  package.xml
src_ROBO720/EX3/franka_CC_3/config/: franka_CC_3.yaml
src_ROBO720/EX3/franka_CC_3/include/franka_CC_3/: MyController_header.hpp
src_ROBO720/EX3/franka_CC_3/launch/: controller.launch.py
src_ROBO720/EX3/franka_CC_3/src/: MyController_cppFile.cpp
